--- a/ecommerce-product-website/src/styles/main.css
+++ b/ecommerce-product-website/src/styles/main.css
@@ -1,12 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
-
 @font-face {
   src: url('../assets/fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
-  font-family: 'Montserrat';
+  font-family: 'Montserrat-400';
 }
 
+@font-face {
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
+  font-family: 'Montserrat-500';
+}
+
+@font-face {
+  src: url('../assets/fonts/Montserrat/static/Montserrat-SemiBold.ttf') format('truetype');
+  font-family: 'Montserrat-600';
+}
+
+@font-face {
+  src: url('../assets/fonts/Montserrat/static/Montserrat-Bold.ttf') format('truetype');
+  font-family: 'Montserrat-700';
+}
+
+
 body { 
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat-400, Montserrat-500, Montserrat-600, Montserrat-700, sans-serif;
 }
 
 * {
@@ -65,7 +79,7 @@ body {
   color: rgb(255, 255, 255);
   padding: 5px 5px;
   font-size: 15px;
-  font-weight: 500;
+  font-family: Montserrat-500;
   line-height: 18.29px;
   text-transform: uppercase;
   text-decoration: none;
@@ -207,7 +221,7 @@ body {
   padding: 12px 48px;
   font-size: 14px;
   line-height: 17.07px;
-  font-weight: 600;
+  font-family: Montserrat-600;
   text-transform: uppercase;
   text-align: center;
   border-radius: 100px;
@@ -253,7 +267,7 @@ body {
 
 .upper-title {
   font-size: 16px;
-  font-weight: 400;
+  font-family: Montserrat-400;
   line-height: 19.5px;
   color: rgb(43, 40, 53);
 }
@@ -263,14 +277,14 @@ body {
 }
 
 .upper-title--header {
-  font-weight: 500;
+  font-family: Montserrat-500;
   letter-spacing: 1px;
   color: rgb(255, 255, 255);
 }
 
 .sub-title {
   font-size: 14px;
-  font-weight: 400;
+  font-family: Montserrat-400;
   line-height: 17.07px;
   color: rgb(3, 3, 3);
 }
@@ -284,7 +298,7 @@ body {
 
 .title {
   margin: 7px -2.56px;
-  font-weight: 700;
+  font-family: Montserrat-700;
   font-size: 50px;
   line-height: 55px;
   color: rgb(43, 40, 53);
@@ -302,7 +316,7 @@ body {
 }
 
 .title--card { 
-  font-weight: 500; 
+  font-family: Montserrat-500;
 }
 
 .title--uppercase { 
@@ -313,7 +327,7 @@ body {
   margin-top: 24px;
   margin-bottom: 43px;
   font-size: 14px;
-  font-weight: 400;
+  font-family: Montserrat-400;
   line-height: 27.01px;
   color: rgb(3, 3, 3);
 }
@@ -321,7 +335,7 @@ body {
 .price {
   margin-top: 27px;
   font-size: 40px;
-  font-weight: 400;
+  font-family: Montserrat-400;
   line-height: 48.76px;
 }
 
@@ -336,7 +350,7 @@ body {
 
 .promo {
   font-size: 13px;
-  font-weight: 500;
+  font-family: Montserrat-500;
   line-height: 19.62px;
 }
 
@@ -394,7 +408,7 @@ body {
 
 .form__input::placeholder {
   padding-left: 20px;
-  font-weight: 400;
+  font-family: Montserrat-400;
   font-size: 14px;
   line-height: 17.07px;
 }
@@ -453,7 +467,7 @@ body {
 .card__price {
   display: inline-block;
   font-size: 25px;
-  font-weight: 600;
+  font-family: Montserrat-600;
   line-height: 30.48px;
   color: rgb(157, 130, 32);
 }
@@ -535,7 +549,7 @@ body {
 .footer__item--title { 
   text-transform: capitalize;
   text-decoration: none;
-  font-weight: 600;
+  font-family: Montserrat-600;
   font-size: 24px;
   line-height: 31px;
   color: rgb(255, 255, 255);
@@ -543,7 +557,7 @@ body {
 
 .footer__item {
   color: rgb(184, 184, 184);
-  font-weight: 500;
+  font-family: Montserrat-500;
   font-size: 12px;
   line-height: 22px;
 }
@@ -563,7 +577,7 @@ body {
 .footer__item--link {
   text-decoration: none;
   color: rgb(184, 184, 184);
-  font-weight: 500;
+  font-family: Montserrat-500;
   font-size: 12px;
   line-height: 22px;
   text-transform: uppercase;
