--- a/ecommerce-product-website/src/styles/main.css
+++ b/ecommerce-product-website/src/styles/main.css
@@ -18,9 +18,16 @@
   font-family: 'Montserrat-700';
 }
 
+:root {
+  --font-400: Montserrat-400;
+  --font-500: Montserrat-500;
+  --font-600: Montserrat-600;
+  --font-700: Montserrat-700;
+}
+
 
 body { 
-  font-family: Montserrat-400, Montserrat-500, Montserrat-600, Montserrat-700, sans-serif;
+  font-family: var(--font-400), var(--font-500), var(--font-600), var(--font-700), sans-serif;
 }
 
 * {
@@ -79,14 +86,14 @@ body {
   color: rgb(255, 255, 255);
   padding: 5px 5px;
   font-size: 15px;
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
   line-height: 18.29px;
   text-transform: uppercase;
   text-decoration: none;
   letter-spacing: 1.91px;
 }
 
-.list--margin {
+.list--spacing {
   flex-grow: 1;
   padding-top: 14px;
   padding-left: 60px;
@@ -112,46 +119,46 @@ body {
 /*------------------------------------*\
   #PADDING DERCLARE
 \*------------------------------------*/
-.pd-section-1 {
+.pd-product-speaker {
   padding-left: 93px;
   padding-right: 54px;
 }
 
-.pd-section-2 {
+.pd-product-beats {
   padding-left: 49px;
   padding-right: 145px;
 }
 
-.pd-section-3 {
+.pd-product-inear {
   padding-left: 93px;
   padding-right: 25px;
 }
 
-.pd-content-section-1 {
+.pd-content-product-speaker {
   padding-top: 239px;
-  padding-bottom: 229px;
+  padding-bottom: 230px;
 }
 
-.pd-content-section-2 {
+.pd-content-product-beats {
   padding-left: 35px;
   padding-top: 235px;
   padding-bottom: 245px;
 }
 
-.pd-content-section-3 {
+.pd-content-product-inear {
   padding-top: 206px;
   padding-bottom: 294px;
 }
 
-.pd-img-section-1 {
+.pd-img-product-speaker {
   padding-top: 47px;
 }
 
-.pd-img-section-2 {
+.pd-img-product-beats {
   padding-bottom: 28px;
 }
 
-.pd-img-section-3 {
+.pd-img-product-inear {
   padding-bottom: 29px;
 }
 
@@ -221,7 +228,7 @@ body {
   padding: 12px 48px;
   font-size: 14px;
   line-height: 17.07px;
-  font-family: Montserrat-600;
+  font-family: var(--font-600);
   text-transform: uppercase;
   text-align: center;
   border-radius: 100px;
@@ -229,17 +236,17 @@ body {
   cursor: pointer;
 }
 
-.btn--yellow { 
+.btn--warning { 
   color: rgb(0, 0, 0);
   background-color: rgb(255, 199, 0);
 }
 
-.btn--header-margin {
+.btn--header {
   margin-left: 35px;
   margin-bottom: 11px;
 }
 
-.btn--black {
+.btn--dark {
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
 }
@@ -267,24 +274,24 @@ body {
 
 .upper-title {
   font-size: 16px;
-  font-family: Montserrat-400;
+  font-family: var(--font-400);
   line-height: 19.5px;
   color: rgb(43, 40, 53);
 }
 
-.upper-title--margin-bottom { 
+.upper-title--bottom { 
   margin-bottom: 85px; 
 }
 
 .upper-title--header {
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
   letter-spacing: 1px;
   color: rgb(255, 255, 255);
 }
 
 .sub-title {
   font-size: 14px;
-  font-family: Montserrat-400;
+  font-family: var(--font-400);
   line-height: 17.07px;
   color: rgb(3, 3, 3);
 }
@@ -298,14 +305,10 @@ body {
 
 .title {
   margin: 7px -2.56px;
-  font-family: Montserrat-700;
+  font-family: var(--font-700);
   font-size: 50px;
   line-height: 55px;
   color: rgb(43, 40, 53);
-}
-
-.title--white { 
-  color: rgb(255, 255, 255); 
 }
 
 .title--header {
@@ -316,7 +319,7 @@ body {
 }
 
 .title--card { 
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
 }
 
 .title--uppercase { 
@@ -327,7 +330,7 @@ body {
   margin-top: 24px;
   margin-bottom: 43px;
   font-size: 14px;
-  font-family: Montserrat-400;
+  font-family: var(--font-400);
   line-height: 27.01px;
   color: rgb(3, 3, 3);
 }
@@ -335,34 +338,29 @@ body {
 .price {
   margin-top: 27px;
   font-size: 40px;
-  font-family: Montserrat-400;
+  font-family: var(--font-400);
   line-height: 48.76px;
 }
 
-.price--white {  
+.price--light {  
   color: rgb(242, 242, 242); 
 }
 
-.price--black { 
-  color: rgb(0, 0, 0); 
-}
-
-
 .promo {
   font-size: 13px;
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
   line-height: 19.62px;
 }
 
-.promo--yellow {
+.promo--warning {
   color: rgb(255, 199, 0); 
 }
 
-.promo--black { 
+.promo--dark { 
   color: rgb(0, 0, 0); 
 }
 
-.promo--white { 
+.promo--light { 
   color: rgb(255, 255, 255); 
 }
 
@@ -389,7 +387,7 @@ body {
   align-items: center;
 }
 
-.form__title--margin { 
+.form__title--spacing { 
   margin: 0px auto;
   margin-bottom: 17px;
 }
@@ -408,7 +406,7 @@ body {
 
 .form__input::placeholder {
   padding-left: 20px;
-  font-family: Montserrat-400;
+  font-family: var(--font-400);
   font-size: 14px;
   line-height: 17.07px;
 }
@@ -427,27 +425,14 @@ body {
 }
 
 .card {
-  box-sizing: border-box;
+  box-sizing: content-box;
   margin: auto 18px;
   margin-top: 35px;
-  padding-left: 49px;
-  width: 393px;
-  height: 560px;
   background-color: rgb(248, 248, 249);
 }
 
-.card--padding-left { 
-  padding-left: 22px; 
-}
-
-.card__holder { 
-  position: relative;
-  height: 325px;
-}
-
-.card__title--margin { 
+.card__title--spacing { 
   margin-top: 23px;
-  margin-bottom: 23px;
 }
 
 .card--size { 
@@ -460,56 +445,52 @@ body {
   line-height: 21px;
 }
 
-.card__title--margin { 
-  margin: 26px 0px 2px -2px; 
-}
-
 .card__price {
   display: inline-block;
   font-size: 25px;
-  font-family: Montserrat-600;
+  font-family: var(--font-600);
   line-height: 30.48px;
   color: rgb(157, 130, 32);
 }
 
-.card__price--margin { 
-  margin: 21px 0px; 
+.card__price--spacing { 
+  margin: 20px 0px; 
 }
 
-.card:nth-child(1) .card__img {
-  position: absolute;
-  top: -4px;
-  left: 2px;
+.card--backgroud-first {
+  background-image: url(../assets/images/yellow-headphone.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
-.card:nth-child(2) .card__img {
-  position: absolute;
-  top: -61px;
-  left: -50px;
+.card--backgroud-second {
+  background-image: url(../assets/images/black-inear.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
-.card:nth-child(3) .card__img {
-  position: absolute;
-  top: 21px;
-  left: 10px;
+.card--backgroud-third {
+  background-image: url(../assets/images/gray-headphone.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
-.card:nth-child(4) .card__img {
-  position: absolute;
-  top: 38px;
-  left: 51px;
+.card--backgroud-fourth {
+  background-image: url(../assets/images/gold-inear.svg);
+  background-repeat: no-repeat;
+  background-position: bottom center;
 }
 
-.card:nth-child(5) .card__img {
-  position: absolute;
-  top: -19px;
-  left: 5px;
+.card--backgroud-fifth {
+  background-image: url(../assets/images/navy-inear.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
-.card:nth-child(6) .card__img {
-  position:  absolute;
-  top: 98px;
-  left: 76px;
+.card--backgroud-sixth {
+  background-image: url(../assets/images/black-inear-lightning.svg);
+  background-repeat: no-repeat;
+  background-position: 130px bottom;
 }
 
 
@@ -549,7 +530,7 @@ body {
 .footer__item--title { 
   text-transform: capitalize;
   text-decoration: none;
-  font-family: Montserrat-600;
+  font-family: var(--font-600);
   font-size: 24px;
   line-height: 31px;
   color: rgb(255, 255, 255);
@@ -557,7 +538,7 @@ body {
 
 .footer__item {
   color: rgb(184, 184, 184);
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
   font-size: 12px;
   line-height: 22px;
 }
@@ -577,7 +558,7 @@ body {
 .footer__item--link {
   text-decoration: none;
   color: rgb(184, 184, 184);
-  font-family: Montserrat-500;
+  font-family: var(--font-500);
   font-size: 12px;
   line-height: 22px;
   text-transform: uppercase;
@@ -603,8 +584,10 @@ body {
 }
 
 .content--card {
-  width: fit-content;
-  height: 235px;
+  padding-top: 325px;
+  padding-left: 49px;
+  padding-bottom: 16px;
+  padding-right: 68px;
 }
 
 
@@ -627,11 +610,11 @@ body {
   position: relative;
 }
 
-.dot__item--white { 
+.dot__item--light { 
   background-color: rgb(255, 255, 255); 
 }
 
-.dot__item--white::after {
+.dot__item--light::after {
   content: "";
   height: 44px;
   width: 44px;
@@ -642,17 +625,17 @@ body {
   left: -6px
 }
 
-.dot__item--red { 
+.dot__item--danger { 
   background-color: rgb(221, 86, 86); 
 }
 
-.dot__item--black { 
+.dot__item--dark { 
   background-color: rgb(0, 0, 0); 
 }
 
 .carousel {
   position: absolute;
-  bottom: 169px;
+  bottom: 170px;
   right: 343px;
 }
 
@@ -664,11 +647,11 @@ body {
   margin: 0px 5px;
 }
 
-.carousel__item--black { 
+.carousel__item--dark { 
   background-color: rgb(0, 0, 0); 
 }
 
-.carousel__item--gray { 
+.carousel__item--muted { 
   background-color: rgb(209, 209, 209); 
 }
 
