--- a/ecommerce-product-website/src/styles/main.css
+++ b/ecommerce-product-website/src/styles/main.css
@@ -702,7 +702,7 @@ body {
   }
 
   .content--header {
-    padding-right: 6vw;
+    padding-right: 2.5vw;
   }
 
   .pd-footer {
@@ -719,7 +719,7 @@ body {
 
 
   .pd-product-speaker, .pd-product-beats, .pd-product-inear {
-    padding-left: 1vw;
+    padding-left: 2vw;
     padding-right: 1vw;
   }
 
@@ -834,6 +834,10 @@ body {
     color: rgb(0, 0, 0);
   }
 
+  .btn--header {
+    margin-left: 20px;
+  }
+
   .pd-img-product-speaker {
     padding-top: 0;
   }
@@ -865,7 +869,6 @@ body {
 
   .area__img {
     position: relative;
-    left: 0;
     background-color:rgb(43, 40, 53);
   }
 
